Improved the Sections of CV

--- a/cv.qmd
+++ b/cv.qmd
@@ -2,6 +2,31 @@
 title: "CV"
 ---
 # Contact Information
+- Mobile: +1 (709) 853-5675
+- LinkedIn: [My LinkedIn Account](https://www.linkedin.com/in/michael-adu-gyamfi-7a96311bb/)  
+- Email: [Here](madugyamfi@mun.ca)
+- Address: 215A Empire Avenue, St. John’s (NL-Canada)
+- Postal Code: A1C 3H3
+
+# Highlights of Qualifications
+## Interpersonal/Communication Skills
+- Served as Course Representative for MPhil Class and spoke to students and faculty members.
+- Marketed investment packages to potential customers during an internship.
+- Led, directed, and preached during service.
+- Addressed external leadership when consulted both in church and school.
+- Served as Master of Ceremony (MC) for academic, civil, and religious activities.
+
+## Research/Analytical Skills
+- Organized data from credible sources for reports.
+- Completed academic term papers, project works, and research works. 
+- Conducted Research from scholarly sites.
+- Discussed, analyzed, and interpreted results for forecasting and decision-making.
+- Prepared lecture slides for Lecturers.
+
+## Teamwork/Leadership Skills
+- Served on several different leadership boards in the church and school.
+- Course Representative at both undergraduate and graduate levels.
+- Supervised during examinations and project works.
 
 # Education
 - MA Economics, Memorial University of Newfoundland, 2024.
@@ -9,3 +34,52 @@ title: "CV"
 - BA. Economics with Mathematics, University of Ghana, 2020.
 
 # Research
+## Undergraduate Term Papers
+- Youth and Graduate Unemployment in Ghana.
+- Property Tax in Ghana.
+- Rationale behind High Healthcare Expenditures.
+- Transactions Cost and Firm Growth.
+
+## Undergraduate Project Work
+- Cost Benefit Analysis of an Ultra-Modern Hall of Residence in the University of Ghana.
+- Microfinance Sector in Ghana (History, Overview, Challenges, and Prospects) – Review Paper.
+
+## Graduate Term Papers
+- The Impact of the NABCO Program on Graduate Employment and Employability in Ghana 
+(Research Proposal).
+- Factors that Influence Patronage from Pharmacy Shops on University of Ghana.
+- The Health System of Ghana; History and Overview.
+- Comparisons of Health Care Systems in The United States, Germany, And Canada; Summary Paper.
+- An Assessment of Public Sector Reforms in Africa – Working Paper.
+
+## Graduate Thesis Paper
+- The LEAP 1000 Project and Household Consumption in Ghana (In progress - MPHIL).
+
+# Currrent Positions
+- Graduate Assistant (2023-2024), Department of Economics, Memorial University of Newfoundland (Help Center Support).
+- Research Assistant(2023-2024), Department of Economics, Memorial University of Newfoundland (Supervisor Prof. Kam Hon Chu).
+
+# Previous Positions 
+- Graduate Teaching Assistant (2022-2023), Department of Economics, University of Ghana, Legon (Supervisor Prof. Edward Nketiah-Amponsah).
+- Teaching and Research Assistant (2020-2021), National Service,  Department of Economics, University of Ghana, Legon (Dr. Gloria Afful-Mensah).
+
+# Fields of Interest
+- Health Economics
+- Public Finance
+- Welfare Economics
+
+# Volunteership/Membership
+- Volunteer and Committee Member, 24th Annual Aldrich Multidisciplinary Conference, Memorial University of Newfoundland.
+- Member, Research Department, Best Grade Services, Ghana.
+
+# Scholarships
+- M.A. Graduate Scholarship, Memorial University of Newfoundland, $8,000.
+- Kenneth Hagan Scholarship, MPHIL Economics. (GH₵4,000)
+- B.A. Economics, SRC Scholarship, Full tuition Level 200 to level 400.
+
+# Awards
+- Graduate Officer Award, Memorial University of Newfoundland, $500.
+
+
+
+
